--- a/page3.html
+++ b/page3.html
@@ -1,1 +1,16 @@
-
+<html>
+<body>
+    <header>
+    <p>Тож не зволікай,
+І купуй арматуру,
+Щоб твої будівлі,
+Були міцними та надійними</p>
+    </header>
+    <main>
+        <p>тепер ви можете продовжувати дивитися своє відео</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Py6XOxhKQ_A?si=NRDXmE6gEH2fteep" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </main>
+    <footer>
+    </footer>
+</body>
+</html>
