--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   <header>
     <h1>Реклама арматури</h1>
+    <a href="page2.html">О нас</a>
+    <a href="page3.html">Видео</a>
   </header>
   <main>
     <section id="about">
